hashicups/ingress-nginx/ingress.yaml
# Ingress resource for Falcosidekick UI
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: hashicups
  # annotations:
  #   kubernetes.io/ingress.class: "nginx"
  #   cert-manager.io/issuer: "selfsigned-issuer"
spec:
  ingressClassName: "nginx"
  # tls:
  #   - hosts:
  #       - falco.maniak.lab
  #     secretName: falco-tls
  rules:
    - host: "hashicups.maniak.lab"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
